[package]
name = "view-prototype"
version = "0.1.0"
authors = ["Colbyn Wadman <hello@colbyn.com>"]
edition = "2018"

[lib]
crate-type=["cdylib", "rlib"]

[dependencies]
futures = "0.1.26"
serde = {version = "1.0.89", features = ["derive"]}
serde_json = "1.0.39"
bincode = "1.1.3"
uuid = { version = "0.7", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
rpds = {version="0.6.0", features = ["serde"]}
im = {version="12.3.4", features = ["serde"]}
either = "1.5.2"
# rand = {version="0.6.5", features = ["wasm-bindgen"]}
rand = {version="*", features = ["wasm-bindgen"]}

###############################################################################
# RUST-WASM
###############################################################################
# js-sys = {version="*", git = "https://github.com/rustwasm/wasm-bindgen.git", rev="cc891090046d07134c1f034a1bf03c43f3df9bad"}
# wasm-bindgen = {version="*", git = "https://github.com/rustwasm/wasm-bindgen.git", rev="cc891090046d07134c1f034a1bf03c43f3df9bad"}
js-sys = "*"
wasm-bindgen = "0.2.42"
console_error_panic_hook = "*"


[dependencies.web-sys]
# version = "*"
version = "0.3.19"
# git = "https://github.com/rustwasm/wasm-bindgen.git"
# rev="cc891090046d07134c1f034a1bf03c43f3df9bad"
features = [
    "console",
    "Comment",
    "Document",
    "Element",
    "HtmlElement",
    "EventTarget",
    "Event",
    "HtmlCollection",
    "Node",
    "NodeList",
    "Text",
    "CharacterData",
    "Window",
    "StyleSheet",
    "HtmlStyleElement",
    "CssRule",
    "CssRuleList",
    "CssStyleRule",
    "CssStyleSheet"
]

